2003-12-18  Peter Stephenson  <pws@csr.com>

	* unposted: Config/version.mk, Completion/Unix/Command/.distfiles:
	zsh-4.0.8.

	* Oliver: 19308: Src/utils.c, Test/C01arith.ztst:
	fix crash with lonely ## in arithmetic.

2003-12-17  Clint Adams  <clint@zsh.org>

	* Stephen Rüger: 19255: Completion/Debian/Command/_apt: update
	to work with APT 0.5.14
	* Oliver: 18626: Src/Modules/terminfo.c: Try to do a better job
	of arg support for echoti, fixing compile problem on 64-bit Solaris

2003-12-16  Oliver Kiddle  <opk@zsh.org>

        * 19299: Completion/Unix/Command/_mount: try to handle
        completion of devices better

2003-12-05  Oliver Kiddle  <opk@zsh.org>

	* 19276: Completion/Base/Completer/_prefix: fix fallback used to
	get completer list if the style lookup failed

2003-12-04  Oliver Kiddle  <opk@zsh.org>

	* Baptiste Daroussin: 19272: Completion/Unix/Command/_chown,
	Completion/Unix/Command/_links, Completion/X/Command/_mplayer:
	use colon separator on Linux for chown, complete links graphics
	drivers and more file types for mplayer

	* unposted: Completion/Unix/Command/_subversion: small addition to
	output from `svn help diff' broke substitution for getting options

2003-12-03  Peter Stephenson  <pws@csr.com>

	* 19269: Src/pattern.c, Misc/globtests, Test/D02glob.ztst:
	8-bit characters didn't work in character classes where
	chars were signed.

2003-11-28  Doug Kearns  <djkea2@mugca.its.monash.edu.au>

	* unposted: Completion/Unix/Command/_elinks: update for version 0.4.3

2003-11-21  Oliver Kiddle  <opk@zsh.org>

	* 19265: Completion/X/Command/_mozilla: update for newer version

	* unposted: Completion/Unix/Command/_screen: tidy up descriptions

2003-11-19  Clint Adams  <clint@zsh.org>

	* 19258: Doc/Zsh/mod_terminfo.yo, Src/Modules/terminfo.c:
	arg support for echoti.

2003-11-14  Clint Adams  <clint@zsh.org>

	* unposted: config.guess, config.sub:
	upgrade to GNU's October 7 versions.

2003-11-14  Oliver Kiddle  <opk@zsh.org>
